--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="image/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Introducing TrackMate XE. Order now. Retina display. GPS. Water resistant. Heart rate notifications. Services: Free no-contact delivery, Online Personal Session, Easy Monthly Instalments."
+    />
+
+    <meta name="keywords" content="TrackMate" />
+    <meta name="author" content="Atomic Developers" />
     <script
       src="https://kit.fontawesome.com/a833045ae5.js"
       crossorigin="anonymous"
