meta tags updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Introducing TrackMate XE. Order now. Retina display. GPS. Water resistant. Heart rate notifications. Services: Free no-contact delivery, Online Personal Session, Easy Monthly Instalments."
     />
+    <meta property="og:title" content="TrackMate.." />
+    <meta property="og:description" content="TrackMate.." />
+    <meta property="og:type" content="Website" />
+    <meta property="og:image" content="http://" />
+    <meta property="og:url" content="https://trackmatexe.netlify.app/" />
 
     <meta name="keywords" content="TrackMate" />
     <meta name="author" content="Atomic Developers" />
